--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <header>
         <nav>
             <div class="logo">
-                <h2>SDT</h2>
+                <h2>S<span class="color-orange">D</span>T</h2>
             </div>
-            <ul>
+            <ul class="menu">
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <li><button>Hire Me</button></li>
+                <li><button class="btn">Hire Me</button></li>
             </ul>
         </nav>
     </header>
