--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
                 <li><button class="btn">Hire Me</button></li>
             </ul>
         </nav>
+
+        <section id="banner">
+           <div class="banner-content">
+               <h2>Hi, I am</h2>
+               <h1>Sadat</h1>
+               <p>In love with nature,video games,art,comics,sports and tech</p>
+               <div>
+                    <button class="btn">Through My Lens</button>
+                    <button class="btn">Contact Me</button>
+               </div>
+           </div>
+           <div class="banner-image">
+                 <img src="images/Adobe Express - file.png" alt="">
+           </div>
+        </section>
     </header>
 </body>
 </html>
