--- a/index.html
+++ b/index.html
@@ -36,5 +36,34 @@
            </div>
         </section>
     </header>
+
+
+    <section id="about">
+
+        <div class="about-container">
+            <div class="section-heading">
+                <h2>About Me</h2>
+                <p>I’m someone who finds inspiration at the intersection of nature and technology. I love immersing myself in video games, exploring art and comics, staying active with sports, and keeping up with the ever-evolving world of tech. Whether it’s a quiet moment appreciating natural beauty or diving deep into a digital experience, I enjoy learning, creating, and pushing my curiosity in new directions.</p>
+            </div>
+            <div class="about-info">
+                <div class="info-card">
+                    <p>Name</p>
+                    <h4>Shafiil Sadat</h4>
+                </div>
+                <div class="info-card">
+                    <p>Email</p>
+                    <h4>sadatshafiil@gmail.com</h4>
+                </div>
+                <div class="info-card">
+                    <p>University</p>
+                    <h4>Metropolitan University,Bangladesh</h4>
+                </div>
+                <div class="info-card">
+                    <p>From:</p>
+                    <h4>Dhaka,Bangladesh</h4>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
