everything is working

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section id="banner">
            <div class="banner-content">
-               <h2>Hi, I am</h2>
+               <h2>Hi, I am</h2><br>
                <h1>Sadat</h1>
                <p>In love with nature,video games,art,comics,sports and tech</p>
                <div>
@@ -96,5 +96,58 @@
             </div>
         </div>
     </section>
+
+    <section id="resume">
+        <div class="section-heading">
+            <h2>A SUMMARY OF MY RESUME</h2>
+        </div>
+        <div class="resume-container">
+            <div class="education">
+                <h2 class="section-title">My Education</h2>
+                <div class="resume-card">
+                    <h3 class="card-title">B.Sc in Computer Science and Engineering</h3>
+                    <p class="card-info">Mettropolitan University,Bangladesh /2024-2027</p>                 
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">H.S.C / INTERMEDIATE</h3>
+                    <p class="card-info">Murarichand College,Sylhet/2018-2020</p>                 
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">S.S.C</h3>
+                    <p class="card-info">Sylhet Govt. Pilot High School,Sylhet/2010-2018</p>                 
+                </div>
+                <hr>
+            </div>
+            <div class="experience">
+                <h2 class="section-title">My Experience</h2>
+                <div class="resume-card">
+                    <h3 class="card-title">Video Editor For My Friends</h3>
+                    <p class="card-info">Did Editing for my friends</p>                 
+                </div>
+                <hr>
+                <!-- <div class="resume-card">
+                    <h3 class="card-title">B.Sc in Computer Science and Engineering</h3>
+                    <p class="card-info">Mettropolitan University,Bangladesh /2024-2027</p>                 
+                </div>
+                <hr> -->
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <section class="footer-container">
+            <div class="social">
+                <h2>Let's Connect!</h2>
+                <p>Click below to connect to my social accounts</p>
+                <div class="icons">
+                    <a href="https://www.facebook.com/sadat.wayne.2024"><img src="images/icons/facebook.png" alt=""></a>
+                    <a href="https://www.instagram.com/__levi.iiii/"><img src="images/icons/insta.png" alt=""></a>
+                    <a href="https://open.spotify.com/user/31n2mdijuwli77wqi35wyhgcm4am?si=zhteFP9DRiG6gN9wcg_yLA"><img src="images/icons/spotify.png" alt=""></a>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
