--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                <h1>Sadat</h1>
                <p>In love with nature,video games,art,comics,sports and tech</p>
                <div>
-                    <button class="btn">Through My Lens</button>
-                    <button class="btn">Contact Me</button>
+                    <a href="https://shafiilsadat013.github.io/ThroughMyLens/"><button class="btn">Through My Lens</button></a>
+                    <a href="https://youtu.be/gCKwgLgb2Z4?si=9jgKarViEll-ps7v"><button class="btn">Listen to my favourite song</button></a>
                </div>
            </div>
            <div class="banner-image">
@@ -59,7 +59,7 @@
                     <h4>Metropolitan University,Bangladesh</h4>
                 </div>
                 <div class="info-card">
-                    <p>From:</p>
+                    <p>From</p>
                     <h4>Dhaka,Bangladesh</h4>
                 </div>
             </div>
