--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                <h2>Hi, I am</h2><br>
                <h1>Sadat</h1>
                <p>In love with nature,video games,art,comics,sports and tech</p>
-               <div>
+               <div class="btn-grp">
                     <a href="https://shafiilsadat013.github.io/ThroughMyLens/"><button class="btn">Through My Lens</button></a>
                     <a href="https://youtu.be/gCKwgLgb2Z4?si=9jgKarViEll-ps7v"><button class="btn">Listen to my favourite song</button></a>
                </div>
